<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true">

    <ListView
        android:id="@+id/message_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/noMessagesTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_conversations"
        android:padding="16dp"
        android:gravity="center"
        android:visibility="gone" />

    <TextView
        android:id="@+id/errorTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#FF0000"
        android:padding="16dp"
        android:gravity="center"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageView
            android:id="@+id/vps_error_icon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_cloud_upload_error"
            android:contentDescription="@string/vps_error"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/vps_progress_icon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_cloud_upload_progress"
            android:contentDescription="@string/vps_progress"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/vps_success_icon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_cloud_upload_success"
            android:contentDescription="@string/vps_success"
            android:visibility="visible" />

    </LinearLayout>

</LinearLayout>
